tests/baselines/reference/jsFileCompilationLetDeclarationOrder2.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(2,1): error TS2448: Block-scoped variable 'a' used before its declaration.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    let b = 30;
    a = 10;
    ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
!!! related TS2728 b.js:1:5: 'a' is declared here.
==== b.js (0 errors) ====
    let a = 10;
    b = 30;
    